crates/nyx-lexer/tests/snapshots/integration_tests__annotations__multi_args.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Hash
- Ident: repr
- LParen
- Ident: C
- Comma
- Packed
- RParen
- Newline
- Struct
- Ident: CPacked
- Newline
- Indent
- Ident: a
- Colon
- U8
- Newline
- Ident: b
- Colon
- I32
- Newline
- Dedent
