crates/nyx-lexer/tests/snapshots/integration_tests__annotations__no_args.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Hash
- Ident: inline
- Newline
- Func
- Ident: fast_add
- LParen
- Ident: a
- Colon
- I32
- Comma
- Ident: b
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Indent
- Return
- Ident: a
- Plus
- Ident: b
- Newline
- Dedent
- Hash
- Ident: cold
- Newline
- Func
- Ident: error_handler
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
- Hash
- Ident: no_mangle
- Newline
- Func
- Ident: exported_c_fn
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
